# Technoschool_Rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
