[package]
name = "Technoschool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
flume = "0.11.0"
tokio-util = "0.7.12"
dashmap = "6.1.0"
bigdecimal = "0.4.5"
num-bigint = "0.4"
nix = "0.29.0"
sysinfo = "0.28.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
select = "0.6"
url = "2.2"
clap = { version = "4.0" }
tower = "0.5.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
http = "0.2.12"
serde_json = "1.0.128"
rand = "0.9.0-alpha.2"
async-trait = "0.1.83"
axum = "0.5"
tower-http = { version = "0.3", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }